# graphrag-template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
inputs/operation dulce/lancedb/entity_description_embeddings.lance/_transactions/: 0-fdd30daa-0530-45bb-88ba-7022f63f0d02.txn  1-74cab7bc-f081-46e7-9c6b-58ce0d2bf546.txn  2-f8c1b513-2e1a-402b-8d9a-d06e1b232a53.txn  3-959efe8a-38cc-4f38-bf4a-d8dd32d5c84c.txn
inputs/operation dulce/lancedb/entity_description_embeddings.lance/data/: 2618de72-d30e-4459-9ad2-529739a16f6e.lance
notebooks/: global_search.ipynb  local_search.ipynb
ragtest/input/: book.txt
src/: app.py  global_search.py  local_search.py
